--- a/src/main/resources/assets/craneshot/lang/en_us.json
+++ b/src/main/resources/assets/craneshot/lang/en_us.json
@@ -3,9 +3,16 @@
   "category.craneshot.ui": "CraneShot UI",
   "key.craneshot.toggle_menu": "Toggle Menu",
   "key.craneshot.select_movement": "Select Movement Type",
-  "key.craneshot.camera1": "Camera Slot 1",
-  "key.craneshot.camera2": "Camera Slot 2",
-  "key.craneshot.camera3": "Camera Slot 3",
+  "key.craneshot.camera1": "1",
+  "key.craneshot.camera2": "2",
+  "key.craneshot.camera3": "3",
+  "key.craneshot.camera4": "4",
+  "key.craneshot.camera5": "5",
+  "key.craneshot.camera6": "6",
+  "key.craneshot.camera7": "7",
+  "key.craneshot.camera8": "8",
+  "key.craneshot.camera9": "9",
+  "key.craneshot.camera10": "10",
   "message.craneshot.orthographic.enabled": "Orthographic camera enabled (Hold Shift + Scroll to zoom)",
   "message.craneshot.orthographic.disabled": "Orthographic camera disabled"
 }
