--- a/src/main/resources/assets/craneshot/lang/en_us.json
+++ b/src/main/resources/assets/craneshot/lang/en_us.json
@@ -8,10 +8,5 @@
   "key.craneshot.camera3": "3",
   "key.craneshot.camera4": "4",
   "key.craneshot.camera5": "5",
-  "key.craneshot.camera6": "6",
-  "key.craneshot.camera7": "7",
-  "key.craneshot.camera8": "8",
-  "key.craneshot.camera9": "9",
-  "key.craneshot.camera10": "10",
-  
+  "key.craneshot.camera6": "6"
 }
