--- a/src/main/resources/assets/craneshot/lang/en_us.json
+++ b/src/main/resources/assets/craneshot/lang/en_us.json
@@ -3,6 +3,7 @@
   "category.craneshot.ui": "CraneShot UI",
   "key.craneshot.toggle_menu": "Toggle Menu",
   "key.craneshot.select_movement": "Select Movement Type",
+  "key.craneshot.follow_movement": "Follow Movement",
   "key.craneshot.camera1": "1",
   "key.craneshot.camera2": "2",
   "key.craneshot.camera3": "3",
